--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/TeX/auxil/
 /TeX/src/Papy_et_al-2005-Exponential data fitting using multilinear algebra The.pdf
 /.idea/
-/TeX/out/*.synctex.gz
+*.synctex.gz
 *.Rdata
-/TeX/*.zip
+*.zip
+*/auxil/
